<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>odometry2</name>
  <version>0.0.1</version>
  <description>Odomertry fusion for ros2</description>
  <maintainer email="jan.bednar14@fel.cvut.cz">jan.bednar14</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mavsdk</depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>builtin_interfaces</depend>

  <depend>nav_msgs</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>px4_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- this is needed to be able to run launch files -->
  <depend>odometry2_py</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
