<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>odometry2</name>
  <version>0.1.0</version>
  <description>Odometry for ROS 2</description>
  <maintainer email="bednar@fly4future.com">Jan Bednar</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>

  <depend>nav_msgs</depend>

  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>fog_msgs</depend>
  <depend>fog_lib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
